[package]
name = "neo6-admin"
version = "0.1.1"
edition = "2021"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace"] }
clap = { version = "4.0", features = ["derive"] }
atty = "0.2"
