[package]
name = "neo6-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prometheus = "0.13"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
config = "0.13"
reqwest = { version = "0.12", features = ["json"] }
bindgen = "0.69"
libc = "0.2"
tower = "0.5"
