[package]
name = "neo6-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prometheus = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
config = "0.13"
reqwest = { version = "0.12", features = ["json"] }
bindgen = "0.69"
libc = "0.2"
tower = "0.5"
serde_yaml = "0.9.34"
libloading = "0.8"
atty = "0.2"
neo6-protocols-lib = { path = "../neo6-protocols/neo6-protocols-lib" }
lu62 = { path = "../neo6-protocols/lu62", optional = true }
mq = { path = "../neo6-protocols/mq", optional = true }
rest = { path = "../neo6-protocols/rest", optional = true }
tcp = { path = "../neo6-protocols/tcp", optional = true }
jca = { path = "../neo6-protocols/jca", optional = true }
tn3270 = { path = "../neo6-protocols/tn3270", optional = true }
