[package]
name = "lu62"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait = "0.1.88"
neo6-protocols-lib = { path = "../neo6-protocols-lib" }
serde_json = "1.0"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
