[package]
name = "tn3270"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
neo6-protocols-lib = { path = "../neo6-protocols-lib" }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
telnet = "0.2"
bytes = "1"
encoding_rs = "0.8"
ebcdic = "0.1.2"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "test_parser"
path = "test/test_parser.rs"
